--- a/sass/partials/components/_selectability.scss
+++ b/sass/partials/components/_selectability.scss
@@ -19,8 +19,9 @@
   }
 
   display: inline-block;
-  margin: 0 0 1em;
-  min-width: 275px;
+  // margin: 0 0 1em;
+  margin: 0 1em 1em 0;
+  min-width: 200px;
   position: relative;
   width: auto;
   z-index: 100;
